# rust-blog

./: .dockerignore  .gitignore  Cargo.toml  default.conf  dev-dockerfile  dev.conf  prod-dockerfile  prod.conf
admin/: Cargo.toml  README.md  Trunk.toml  index.html  style.css
admin/public/theme/: base.css  components.css  form.css  pages.css
admin/src/: app.rs  lib.rs  main.rs
admin/src/common/api/: api_service.rs  models.rs
admin/src/common/components/authentication/: login.rs
admin/src/common/components/post/: post_detail.rs  post_preview.rs
admin/src/common/utils/: markdown_to_html.rs
admin/src/pages/administrator/: admin.rs
admin/src/pages/administrator/post/: add_edit_post.rs  add_post.rs  manage_post.rs
admin/tests/: mod.rs
api/: .env  .gitignore  Cargo.toml  Dockerfile  SETUP.md  dev-dockerfile  dev.yml  docker-compose.dev.yml  prod-dockerfile  prod.yml
api/migrations/: 20240115210446_all_tables.sql
api/src/: lib.rs  main.rs
api/src/common/authentication/: auth_service.rs
api/src/common/repository/: base.rs
api/src/common/repository/administrator/: models.rs  repo.rs
api/src/common/repository/mail/: models.rs  repo.rs
api/src/common/repository/post/: models.rs  repo.rs
api/src/common/repository/user/: models.rs  repo.rs
api/src/common/utils/: datetime_utils.rs
api/src/common_test/: fixtures.rs
api/src/routes/: auth_helper.rs  base_model.rs  stripped_down_error.rs
api/src/routes/authentication/: models.rs  routes.rs
api/src/routes/mail/: models.rs  routes.rs
api/src/routes/post/: models.rs  routes.rs
api/src/routes/route_configs/: admin_configs.rs  post_configs.rs  user_configs.rs
api/tests/: mod.rs
api/tests/common/authentication/: test_auth_service.rs
api/tests/common/repository/administrator/: test_administrator.rs
api/tests/common/repository/mail/: test_mail.rs
api/tests/common/repository/post/: test_post.rs
api/tests/routes/authentication/: test_authentication_routes.rs
api/tests/routes/mail/: test_mail_routes.rs
api/tests/routes/post/: test_post_routes.rs
api/tools/: clean.sql  docker-commands.txt  docker-on-git.sh  pgcommands.txt  run-local-tests.sh  run-migration.txt  setup-local-run.sh
api/tools/dev/: docker-build.sh  docker-clean.sh  setup-db-run-tests.sh  setup-dev-data.sql
api/tools/prod/: docker-build.sh  docker-clean.sh
common/: Cargo.toml  build.rs
common/src/: lib.rs
common/src/api/: api_service.rs
common/src/components/: layout.rs  page_not_found.rs
common/src/components/authentication/: login.rs
common/src/components/post/: list_post_previews.rs  post_detail.rs  post_preview.rs
common/src/testing_utils/: fake_data.rs
common/src/utils/: markdown_to_html.rs
tools/: run-tests.sh
tools/dev/: docker-build.sh
tools/prod/: docker-build.sh  docker-clean.sh
web/: .gitignore  Cargo.toml  README.md  Trunk.toml  default.conf  dev-dockerfile  dev-nginx-dockerfile  dev.yml  index.html
web/public/theme/: base.css  form.css  home.css  modal.css  pages.css  post_detail.css  post_preview.css
web/src/: app.rs  lib.rs  main.rs
web/src/common/: layout.rs
web/src/common/api/: api_service.rs  models.rs
web/src/common/components/: layout.rs  modal.rs
web/src/common/components/authentication/: login.rs
web/src/common/components/post/: post_detail.rs  post_preview.rs
web/src/common/testing_utils/: fake_data.rs
web/src/common/utils/: date_time.rs  markdown_to_html.rs  md_to_html_util.rs
web/src/pages/: admin.rs  home.rs
web/src/pages/administrator/: add_post.rs  admin.rs  mail.rs
web/src/pages/administrator/post/: add_post.rs
web/src/pages/home/: home.rs  individual_post.rs
web/tests/: mod.rs
web/tools/dev/: docker-build.sh
