[package]
name = "rust-blog-admin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-blog-admin"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
leptos-use = "0.10.1"
leptos_meta = { version = "0.6.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.5", features = ["csr", "nightly"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
