[package]
name = "rust-blog-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-blog-api"

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.5.1"
actix-web = { version = "4.4.1", features = ["openssl", "rustls-0_21"] }
actix-files = "0.6.5"
actix-multipart = "0.6.1"
argon2 = "0.5.2"
async_once = "0.2.6"
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.1"
fake = { version = "2.9.2", features=['derive']}
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
mockall = "0.12.1"
multipart = "0.18.0"
protoc = "2.28.0"
ring = { version = "0.17.7", features = ["std"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
rustls = "0.21.0"
rustls-pemfile = "1.0.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.6.1", features = ["v4", "serde"] }