[package]
name = "rustyindie-web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustyindie-web"

[dependencies]
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
derive_more = { workspace = true }
js-sys = { workspace = true }
leptos = { workspace = true }
leptos-use = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

rustyindie-common = { path = "../common" }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
